--- a/VSDiagnostics/VSDiagnostics/VSDiagnostics.Test/packages.config
+++ b/VSDiagnostics/VSDiagnostics/VSDiagnostics.Test/packages.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0-rc3-20150529-06" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-rc3-20150529-06" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-rc3-20150529-06" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0-rc3-20150529-06" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0-rc3-20150529-06" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0-rc3-20150529-06" targetFramework="net45"
+           userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-rc3-20150529-06" targetFramework="net45"
+           userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-rc3-20150529-06" targetFramework="net45"
+           userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0-rc3-20150529-06" targetFramework="net45"
+           userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0-rc3-20150529-06" targetFramework="net45"
+           userInstalled="true" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net45" userInstalled="true" />
   <package id="NUnit" version="3.0.0-beta-2" targetFramework="net45" userInstalled="true" />
   <package id="RoslynTester" version="1.1.0-rc2" targetFramework="net45" userInstalled="true" />
