--- a/VSDiagnostics/VSDiagnostics/VSDiagnostics.Test/VSDiagnostics.Test.csproj
+++ b/VSDiagnostics/VSDiagnostics/VSDiagnostics.Test/VSDiagnostics.Test.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Tests\General\ConditionIsAlwaysTrueTests.cs" />
     <Compile Include="Tests\General\ExplicitAccessModifiersTests.cs" />
     <Compile Include="Tests\Attributes\FlagsEnumValuesAreNotPowersOfTwoTests.cs" />
+    <Compile Include="Tests\General\FieldCanBeMadeReadonlyTests.cs" />
     <Compile Include="Tests\General\GotoDetectionTests.cs" />
     <Compile Include="Tests\General\IfStatementWithoutBracesTests.cs" />
     <Compile Include="Tests\General\LoopStatementWithoutBracesTests.cs" />
