--- a/VSDiagnostics/VSDiagnostics/VSDiagnostics/VSDiagnostics.csproj
+++ b/VSDiagnostics/VSDiagnostics/VSDiagnostics/VSDiagnostics.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Diagnostics\General\ExplicitAccessModifiers\ExplicitAccessModifiersCodeFix.cs" />
     <Compile Include="Diagnostics\Attributes\FlagsEnumValuesAreNotPowersOfTwo\FlagsEnumValuesAreNotPowersOfTwoAnalyzer.cs" />
     <Compile Include="Diagnostics\Attributes\FlagsEnumValuesAreNotPowersOfTwo\FlagsEnumValuesAreNotPowersOfTwoCodeFix.cs" />
+    <Compile Include="Diagnostics\General\FieldCanBeMadeReadonly\FieldCanBeMadeReadonlyAnalyzer.cs" />
     <Compile Include="Diagnostics\General\GotoDetection\GotoDetectionAnalyzer.cs" />
     <Compile Include="Diagnostics\General\IfStatementWithoutBraces\IfStatementWithoutBracesAnalyzer.cs" />
     <Compile Include="Diagnostics\General\IfStatementWithoutBraces\IfStatementWithoutBracesCodeFix.cs" />
